--- a/public/theme/css/style.css
+++ b/public/theme/css/style.css
@@ -132,6 +132,7 @@ h4, h5, h6, .h4, .h5, .h6 {
         transform-origin: 0% 0%;
         transition: .5s;
         opacity: 0;
+        left: -100px;
     }
     
     .navbar .nav-item:hover .dropdown-menu {
